--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -6,6 +6,7 @@
 
     <link rel="shortcut icon" href="favicon/favicon.ico">
     <link rel="stylesheet" href="css/style.bundle.css">
+    <script src="js/bundle.js" charset="utf-8" async defer></script>
 
     <title><%=title%></title>
   </head>
