--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,21 +1,22 @@
-$font-stack: -apple-system, BlinkMacSystemFont, Roboto, "Open Sans", "Helvetica Neue", sans-serif;
+/**************************************/
+/* Option A: Include all of Bootstrap */
+/**************************************/
 
-@font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/fonts_/Roboto-Regular.ttf);
-}
+/*@import "~bootstrap/scss/bootstrap";*/
 
-body {
-  font-family: $font-stack;
-  background-image: url(../img/img_/logo.svg);
-  #logo {
-    width: 10rem;
-  }
-  .container {
-    img {
-      width: 20rem;
-    }
-  }
-}
+/****************************************/
+/* Option B: Include parts of Bootstrap */
+/****************************************/
+
+// Required
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+
+// Optional
+@import "~bootstrap/scss/reboot";
+@import "~bootstrap/scss/type";
+@import "~bootstrap/scss/images";
+@import "~bootstrap/scss/code";
+@import "~bootstrap/scss/grid";
+
