--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -1,5 +1,10 @@
-<footer><%=author%></footer>
 
-<script src="js/bundle.js"></script>
-</body>
+
+      </main>
+
+      <footer class="container-fluid">
+      </footer>
+    </div>
+
+  </body>
 </html>
