--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -1,14 +1,18 @@
-<!doctype html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!DOCTYPE html>
+<html class="h-100">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
+  <title><%=title%></title>
+</head>
+  <body class="h-100">
+    <div class="h-100 d-flex flex-column justify-content-between">
+      <header class="container-fluid">
 
-    <link rel="shortcut icon" href="favicon/favicon.ico">
-    <link rel="stylesheet" href="css/style.bundle.css">
-    <script src="js/bundle.js" charset="utf-8" async defer></script>
+        <nav>
+        </nav>
 
-    <title><%=title%></title>
-  </head>
-  <body>
-    <header><img src="img/logo.svg" id="logo"></header>
+      </header>
+
+      <main>
