--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1,9 +1,8 @@
 <% var data = {
-  title: "Заголовок | Проект",
-  author: "Harrix"
+  title: "Главная страница",
 }; %>
 <%= _.template(require('./../includes/header.html').default)(data) %>
 
-<div class="container">Первая страница.</div>
+
 
 <%= _.template(require('./../includes/footer.html').default)(data) %>
